[package]
name = "RustMuTelemetryHelperLib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_mu_telemetry_helper_lib"
path = "src/lib.rs"

[dependencies]
mu_pi = {workspace=true}
mu_rust_helpers = {workspace=true}
r-efi = {workspace=true}
RustAdvancedLoggerDxe = {workspace=true}
uuid = {workspace=true}

[dev-dependencies]
RustAdvancedLoggerDxe = {workspace=true, features=["std"]}
